# ai-web-scraper

./: README.md  ai_extractor.py  deploy.sh  main.py  pyproject.toml  schemas.py  scrape.py
