[tool.poetry]
name = "ai-web-scraper"
version = "0.1.0"
description = "a small program that allows you to scrape any website using natural language"
authors = ["Rena Shah"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.247"
fastapi = "*"
openai = "*"
beautifulsoup4 = "*"
python-dotenv = "*"
playwright = "*"
dotenv = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
